# terraform-registry-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
terraform_mcp_server/: __init__.py  server.py
